--- a/index2.html
+++ b/index2.html
@@ -10,9 +10,9 @@
             <nav>
                 <div>
                     <ul class="nav-links">
-                        <li><a href="page1.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="">About App</a></li>
-                        <li><a href="page2.html">Contact Us</a></li>
+                        <li><a href="index2.html">Contact Us</a></li>
                         <li><a href="">Log Out</a></li>
                     </ul>
                 </div>
